@@ -348,7 +348,7 @@ limitations under the License.
 
   <div id="result">
 
-    <a id="url" href="#"></a>
+    <a id="url" class="address-bar" href="#"></a>
 
     <div id="response">
 
